#*******************************************************************************
# * Copyright (c) 2011 - 2013 ACIN, fortiss GmbH
# * All rights reserved. This program and the accompanying materials
# * are made available under the terms of the Eclipse Public License v1.0
# * which accompanies this distribution, and is available at
# * http://www.eclipse.org/legal/epl-v10.html
# *
# * Contributors:
# *   Monika Wenger, Alois Zoitl
# *   - initial API and implementation and/or initial documentation
# *******************************************************************************/
#############################################################################
# Comparison
#############################################################################
forte_add_sourcefile_hcpp(F_GT)
forte_add_sourcefile_hcpp(F_EQ)
forte_add_sourcefile_hcpp(F_GE)
forte_add_sourcefile_hcpp(F_LE)
forte_add_sourcefile_hcpp(F_LT)
forte_add_sourcefile_hcpp(F_NE)


#add_subdirectory(tests)